Added some styling to the now monthly-summary section and centered some text - also added a rounding mechanism to put final calculations rounded to two decimal places

--- a/ibudget/src/components/css/Calculator.css
+++ b/ibudget/src/components/css/Calculator.css
@@ -2,3 +2,35 @@
     display: flex;
     justify-content: space-around;
 }
+
+.formFieldset {
+    border: 1px solid;
+}
+
+.formLegend {
+    margin: 10px;
+    width: 15px;
+}
+
+.Calculator {
+    margin: 3% 10%;
+}
+
+.Calculator-summary{
+    margin-bottom: 5%;
+}
+
+.analysis {
+    margin-bottom: 5%
+}
+
+.Calculator-summary h1, .analysis h1 {
+    display: flex;
+    justify-content: center;
+}
+
+.Card-summary h4, h3 {
+    display: flex;
+    justify-content: center;
+}
+
