Purposely left scrap work involving nested object to array manipulation as a reference (will remove), added react-minimal-pie-chart to display visual data between balance and expenses, has dynamic aspect to pie chart and shows as percentages - used a cheese method to display object key value pairs onto history section, which is a bit difficult to style and changed the styling of the (add, remove, calculate, reset) buttons and the organization of the analysis section.

--- a/ibudget/src/components/css/Calculator.css
+++ b/ibudget/src/components/css/Calculator.css
@@ -34,3 +34,46 @@
     justify-content: center;
 }
 
+.Calculator-income h2, .Calculator-expense h2, .Calculator-income input, .Calculator-expense input {
+    display: flex;
+    justify-content: center;
+}
+
+.income-content, .expense-content {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-bottom: 3%;
+}
+
+#calc{
+    display: inline-block;
+    position: absolute;
+    text-align: center;
+    left:35%;
+    margin-top: 2%;
+    margin-bottom: 3%
+}
+
+#reset{
+    display: inline-block;
+    position: absolute;
+    text-align: center;
+    right: 35%;
+    margin-top: 2%;
+    margin-bottom: 3%
+}
+
+.deleteForm {
+    margin: auto 92%;
+    padding: 1%;
+    
+}
+
+.Card-analysis-history{
+    margin: 2%;
+}
+
+#history-cardDeck {
+    
+}
