--- a/ibudget/src/App.css
+++ b/ibudget/src/App.css
@@ -6,9 +6,17 @@
 
 .App-nav {
   border: 1px solid black;
+  
 }
 
+
+
 .active-link {
-  color: pink;
+  color: white;
+  border: 1px solid white
   
+}
+
+.link {
+  color:
 }
